--- a/src/weather.css
+++ b/src/weather.css
@@ -27,9 +27,20 @@
   line-height: 19px;
   list-style: none;
 }
-.weather canvas {
-  margin: 10px 0;
+.WeatherInfo canvas {
+  display: inline-block;
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
 }
+
+.Weather canvas {
+  display: inline-block;
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
+}
+
 .weather .temperature {
   font-weight: bold;
   color: rgb(33, 33, 33);
@@ -51,6 +62,6 @@
   top: -34px;
   line-height: 1;
 }
-.float-left div {
-  display: inline;
+.float-left {
+  display: inline-block;
 }
